--- a/ex1/pom.xml
+++ b/ex1/pom.xml
@@ -23,6 +23,15 @@
 					<encoding>utf-8</encoding>
 				</configuration>
 			</plugin>
+			<!--
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+			-->
 		</plugins>
 	</build>
 
